# racksmith

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.dev.md  README.md  SECURITY.md  chat.md  docker-compose.client.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  go-live-reqs.md  new_sys_action_doc.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  run_tests.py  run_worker.py  settings.py
backend/_utils/: ansible.py  db.py  db_migrations.py  environ.py  logging.py  redis.py  registry.py  schemas.py  slugs.py
backend/actions/: managers.py  router.py  schemas.py
backend/ansible/: __init__.py  config.py  devices.py  extensions.py  inventory.py  migrations.py  playbooks.py  racks.py  roles.py  run.py
backend/ansible/tests/: __init__.py  conftest.py  test_config.py  test_extensions.py  test_inventory.py  test_racks.py  test_roles.py
backend/auth/: __init__.py  router.py  session.py
backend/code/: managers.py  router.py  schemas.py
backend/config_schema/: __init__.py  docs.py  registry.py  validator.py
backend/config_schema/models/: __init__.py  node.py
backend/github/: __init__.py  managers.py  misc.py  router.py  schemas.py
backend/groups/: managers.py  router.py  schemas.py
backend/hosts/: __init__.py  managers.py  router.py  schemas.py
backend/nodes/: __init__.py  managers.py  router.py  schemas.py
backend/onboarding/: __init__.py  router.py
backend/playbooks/: __init__.py  managers.py  router.py  schemas.py
backend/playbooks/role_templates/: __init__.py  _base.py  catalog.py  disk_usage.py  get_info.py  memory_usage.py  ping.py  reboot_if_required.py  service_status.py  system_upgrade.py  uptime.py
backend/racks/: managers.py  misc.py  router.py  schemas.py
backend/registry/: managers.py  router.py  schemas.py
backend/repos/: __init__.py  import_ansible.py  managers.py  migration.py  router.py  schemas.py
backend/roles/: managers.py  prompts.py  router.py  schemas.py
backend/schema/: __init__.py  docs.py  registry.py  router.py  validator.py
backend/schema/models/: __init__.py  action.py  group.py  node.py  rack.py  stack.py
backend/setup/: managers.py  router.py  schemas.py
backend/ssh/: __init__.py  managers.py  misc.py  router.py  schemas.py
backend/stacks/: __init__.py  managers.py  router.py  schemas.py
backend/tests/: conftest.py  test_code_managers.py  test_github_misc.py  test_groups_managers.py  test_hosts_managers.py  test_playbooks_managers.py  test_racks_managers.py  test_registry_managers.py  test_repos_managers.py  test_roles_managers.py  test_schema_docs.py  test_utils.py
backend/tests/ansible/: test_config.py  test_devices.py  test_inventory.py  test_playbooks.py
backend/worker/: functions.py  settings.py
client/backend/: README.md  main.py  pyproject.toml  run_tests.py  run_worker.py  settings.py  settings_store.py
client/backend/_utils/: agent_stream.py  ai.py  environ.py  exceptions.py  generation_session.py  helpers.py  logging.py  openai.py  pagination.py  redis.py  repo_helpers.py  router.py  run_manager.py  runs.py  schemas.py  slugs.py  streaming.py  websocket.py
client/backend/ai/: __init__.py  chat_context.py  chat_schemas.py  chat_store.py  chat_view.py  router.py
client/backend/auth/: dependencies.py  git.py  managers.py  router.py  schemas.py  session.py  workspace.py
client/backend/core/: __init__.py  config.py  extensions.py  groups_io.py  hosts_io.py  inventory.py  inventory_shared.py  migrations.py  playbooks.py  rack_nodes.py  racks.py  racksmith_meta.py  roles.py  run.py  serialize.py
client/backend/daemon/: client.py  proxy.py
client/backend/git/: __init__.py  router.py
client/backend/groups/: managers.py  router.py  schemas.py
client/backend/hosts/: managers.py  router.py  scan.py  scan_misc.py  scan_schemas.py  schemas.py  ssh.py  ssh_misc.py  ssh_schemas.py
client/backend/onboarding/: router.py
client/backend/playbooks/: debug_prompts.py  managers.py  prompts.py  router.py  schemas.py
client/backend/racks/: __init__.py  managers.py  router.py  schemas.py
client/backend/repo/: __init__.py  files.py  files_schemas.py  import_ansible.py  managers.py  router.py  schemas.py
client/backend/roles/: __init__.py  managers.py  prompts.py  registry.py  registry_schemas.py  router.py  schemas.py
client/backend/settings_api/: router.py  schemas.py
client/backend/subnets/: router.py  schemas.py
client/backend/tests/: conftest.py  test_edge_cases.py  test_files_managers.py  test_github_misc.py  test_groups_managers.py  test_hosts_managers.py  test_playbook_generation.py  test_playbooks_managers.py  test_racks_managers.py  test_registry_managers.py  test_registry_playbook_managers.py  test_repos_managers.py  test_roles_managers.py  test_schemas.py  test_ssh_misc.py  test_subnet_inference.py  test_worker_run_ansible.py
client/backend/worker/: __init__.py  ansible.py  functions.py  settings.py
client/daemon/: README.md  auth.py  main.py  pyproject.toml  run_worker.py  settings.py
client/daemon/ansible/: binaries.py  collections.py  router.py  runner.py  validate.py
client/daemon/discovery/: misc.py  router.py  scanner.py  schemas.py
client/daemon/ssh/: exec.py  history.py  keys.py  misc.py  ping.py  probe.py  reboot.py  router.py  schemas.py  terminal.py
client/daemon/tests/: test_ansible_binaries.py  test_ansible_runner.py  test_ssh_misc.py
client/daemon/worker/: settings.py
client/shared/: README.md  pyproject.toml
client/shared/racksmith_shared/: __init__.py  environ.py  helpers.py  logging.py  redis.py  runs.py  schemas.py  settings_base.py
registry/backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
registry/backend/_utils/: environ.py
registry/backend/auth/: crypto.py  dependencies.py  router.py
registry/backend/db/: init-test-db.sh  models.py
registry/backend/playbooks/: managers.py  router.py  schemas.py
registry/backend/roles/: managers.py  router.py  schemas.py
registry/backend/tests/: conftest.py  (+1 more)
(+366 files in other folders)
