[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncssh>=2.22.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.2.1",
    "ruamel-yaml>=0.19.1",
    "structlog>=25.5.0",
]
