[project]
name = "racksmith-shared"
version = "0.1.0"
description = "Shared code between Racksmith API and daemon"
requires-python = ">=3.14"
license = "AGPL-3.0"
authors = [{name = "Ekku Leivonen"}]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
strict_optional = true
