[project]
name = "racksmith-registry"
version = "0.1.0"
description = "Racksmith role registry — public catalog of reusable Ansible roles"
requires-python = ">=3.13"
license = {file = "../../LICENSE"}
authors = [{name = "Ekku Leivonen"}]

dependencies = [
    "fastapi[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "httpx",
    "structlog",
    "cryptography>=46.0.5",
    "slowapi>=0.1.9",
    "requests>=2.33.0",
]

[project.urls]
Homepage = "https://github.com/ekkuleivonen/racksmith"
Repository = "https://github.com/ekkuleivonen/racksmith"
Issues = "https://github.com/ekkuleivonen/racksmith/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
strict_optional = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:debugging -p no:faulthandler"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "types-pyyaml>=6.0.12.20250915",
]
